sass/components/_projects.scss
h2 {
  margin: 0 auto;
  @media only screen and (min-width: $break-tablet) {
    margin-bottom: 25px;
  }
}

.project-cards {
  @media only screen and (min-width: $break-tablet) {
    display: flex;
    margin: 0 auto;
    flex-wrap: wrap;
  }
}

// Project card
.project {
  @each $name, $color in $project-colors {
    &__#{$name} {
      @include project-card($color);
    }
  }
}

.primary-image {
  margin-top: 50px;

  img {
    width: 100%;
    height: auto;
    max-width: 600px;

    @media only screen and (min-width: $break-tablet) {
      max-width: 400px;
    }
  }
}

.background-svg {
  position: absolute;
  right: 0;
  z-index: -1;

  width: 100vw;
  margin-top: 30px;

  svg {
    width: 100%;
    height: 100%;
  }

  @each $name, $color in $project-colors {
    &__#{$name} {
      svg > path {
        fill: $color;
      }
    }
  }
}

figcaption {
  font-style: italic;
  margin-bottom: 2.5em;
}

.app-video,
.desktop-video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

// GOALS
.goals-container {
  margin-top: 60px;
  @media only screen and (min-width: $break-desktop) {
    margin-top: 120px;
  }
}

@media only screen and (min-width: $break-desktop) {
  .goal-big-screens {
    display: flex;
    justify-content: center;
  }
}

.goals-container img {
  width: 25%;
  @media only screen and (min-width: $break-desktop) {
    width: 15%;
  }
}

.goal {
  margin-bottom: 50px;
  @media only screen and (min-width: $break-desktop) {
    margin-bottom: 0px;
  }
}

// USER TESTING
.user-testing-container {
  display: flex;

  &__text {
    margin-right: 120px;
  }
  &__img {
    margin: auto 0;
  }
}

@media only screen and (min-width: $break-desktop) {
  .app-video {
    width: 300px;
  }

  .desktop-video {
    width: 750px;
  }
}

.project-page-section {
  @include default-margin();
  margin-top: 11rem;

  line-height: 1.5;

  ul {
    padding-left: 0;
    list-style: none;
  }

  li {
    font-family: $secondary-font;
    margin-bottom: 0.9rem;
  }

  h3 {
    font-family: $secondary-font;
    font-size: 1.8rem;
    font-weight: normal;
    margin-bottom: -0.9rem;
    margin-top: 0.2rem;
    font-weight: 600;
    &:first-of-type {
      margin-bottom: 1.2rem;
    }
  }

  @media only screen and (min-width: $break-desktop) {
    p,
    h3,
    li {
      width: 500px;
    }
    table,
    figure {
      max-width: 800px;
    }

    .small-image {
      width: 500px;
    }
  }

  figure {
    margin: 0;
  }

  .goals-container p {
    margin-top: 0px;
    @media only screen and (min-width: $break-desktop) {
      width: 280px;
    }
  }
  @media only screen and (min-width: $break-desktop) {
    max-width: 1000px;
    margin: 0 auto;
    margin-top: 135px;
  }

  table {
    display: none;
  }

  @media only screen and (min-width: $break-tablet) {
    td {
      background-color: #fff;
    }

    tr:first-of-type,
    td:nth-of-type(1) {
      background-color: #f6f6f6;
    }

    th,
    td {
      padding: 10px;
    }

    table,
    th,
    td {
      border: 2px solid #d9d9d9;
    }

    table {
      border-collapse: collapse;
      margin: 50px 0;
      display: block;
    }
  }
}

.project-page-description {
  font-family: $primary-font;
  font-weight: lighter;
  position: relative;
  margin-top: -1px;
  padding-bottom: 100px;

  @each $color-name, $color-value in $project-colors {
    &__#{$color-name} {
      @extend .project-page-description;
      background-color: $color-value;
    }
  }

  p {
    margin-top: 1.7rem;
    @include default-margin();

    @media only screen and (min-width: $break-desktop) {
      margin: 0;
    }
  }

  h3 {
    font-size: 1.8rem;
    @include default-margin();

    margin-top: 3.3rem;
    margin-bottom: 0.6rem;

    &:first-of-type {
      margin-top: 0;
      padding-top: 50px;
    }

    @media only screen and (min-width: $break-desktop) {
      margin: 1.7rem 0 0;
    }
  }

  &__short {
    margin-bottom: 50px;
  }

  &__content {
    @media only screen and (min-width: $break-desktop) {
      max-width: 1000px;
      margin: 0 auto;
      padding-top: 80px;
      display: flex;
    }
  }
}

.next-page-box {
  height: 170px;
  margin-top: 8rem;
  display: block;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  span {
    font-family: $primary-font;
  }

  span:first-of-type {
    font-size: 0.8rem;
    text-transform: uppercase;
  }

  span:last-of-type {
    font-size: 1.6rem;
  }
}

@each $name, $color in $project-colors {
  .next-page-box__#{$name} {
    @extend .next-page-box;
    background-color: $color;

    span {
      color: color.scale($color, $lightness: -80%);
    }
  }
}
@each $color-name, $color-value in $project-colors {
  .top-triangles {
    display: flex;
  }

  .right-triangle__#{$color-name} {
    color: $color-value;
    width: 0;
    height: 0;
    border-top: 50px solid transparent;
    border-left: 50vw solid $color-value;
    border-right: 0vw solid transparent;
  }

  .left-triangle__#{$color-name} {
    color: $color-value;
    width: 0;
    height: 0;
    border-top: 50px solid transparent;
    border-left: 0 solid transparent;
    border-right: 50vw solid $color-value;
  }

  .down-triangle__#{$color-name} {
    color: $color-value;
    width: 0;
    height: 0;
    border-top: 50px solid $color-value;
    border-left: 50vw solid transparent;
    border-right: 50vw solid transparent;

    @media only screen and (min-width: $break-desktop) {
      margin-bottom: 100px;
    }
  }
}

